--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "github-notify-ml"]
 	path = github-notify-ml
 	url = https://github.com/aaronpk/github-notify-ml.git
-	branch = master
+	branch = main
